com calendario no dashboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="cadastro_sexo">Sexo</string>
     <string name="cadastro_dados_para_autenticacao">Dados para autenticação</string>
     <string name="cadastro_dados_pessoais">Dados Pessoais</string>
+    <string name="nos_pesar_pesar">Vamos nos pesar?</string>
 </resources>
